# wafflebot

wafflebot_bringup/: package.xml  setup.cfg  setup.py
wafflebot_bringup/launch/: display.launch.xml
wafflebot_description/: package.xml  setup.cfg  setup.py
wafflebot_description/meshes/: lds.stl  left_tire.stl
wafflebot_description/rviz/: botconfig.rviz
wafflebot_description/urdf/: wafflebot.urdf
wafflebot_description/urdf/.ipynb_checkpoints/: wafflebot-checkpoint.urdf
