<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wafflebot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aditya16ranjan@gmail.com">aditya</maintainer>
  <license>Apache-2.0</license>

  <depend>[deps]</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>wafflebot_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
